<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/portrait_mode_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/step_instruction_text_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/rounded_text_shape"
                android:gravity="center_horizontal"
                android:paddingTop="30dp"
                android:textAlignment="center"
                android:textColor="@color/cardview_dark_background"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/step_video_player_view" />


            <TextView

                android:id="@+id/video_not_available"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="110dp"
                android:background="@color/colorYellow"
                android:padding="20dp"
                android:text="@string/video_not_available"
                android:textAlignment="center"
                android:textColor="@color/cardview_dark_background"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/step_instruction_text_view"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/prev_step"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/prev_step"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/next_step"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/next_step"
                    android:textSize="15sp" />
            </RelativeLayout>

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/step_video_player_view"
                android:layout_width="match_parent"
                android:layout_height="319dp"
                android:paddingTop="0dp"
                app:layout_constraintBottom_toTopOf="@+id/step_instruction_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:use_controller="false">

            </com.google.android.exoplayer2.ui.SimpleExoPlayerView>

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
